mobile apps on fire

--- a/src/content/pages/conditions/fire.mdx
+++ b/src/content/pages/conditions/fire.mdx
@@ -15,7 +15,7 @@ import WebcamGallery from '../../../components/WebcamGallery.astro';
 
 **Smaller fires:** Sometimes smaller fires don't show up on Watch Duty. Check [Cal Fire Incidents](https://www.fire.ca.gov/incidents/) ([map layout](https://www.fire.ca.gov/imapdata/index.html)) for California-managed fires. Federal fires appear on Inciweb - see their [map view](https://inciweb.nwcg.gov/) or [Table of Incidents](https://inciweb.nwcg.gov/accessible-view/).
 
-**Mobile apps:** Gaia GPS and [Caltopo](https://caltopo.com) both have [satellite heat detection and fire activity layers](https://caltopo.com/map.html#ll=37.63354,-119.23153&z=11&b=mbt&o=mbt%2Cr&n=1,0.21&a=modis_vp%2Cgoesfire) available for free users.
+**Mobile apps:** [Gaia GPS](https://blog.gaiagps.com/find-and-avoid-wildfires-with-new-heat-detection-layer/) and [Caltopo](https://caltopo.com/map.html#ll=37.63354,-119.23153&z=11&b=mbt&o=mbt%2Cr&n=1,0.21&a=modis_vp%2Cgoesfire) both have satellite heat detection and fire activity layers available for free users.
 
 **General info:** [Wildland Fires & Smoke](https://wildlandfiresmoke.net/) has comprehensive information about both fires and air quality.
 
